<resources>
    <string name="app_name">COMP3025ASSIGNMENT</string>
    <string name="weather">Weather</string>
    <string name="weather_details">Weather Details</string>
    <string name="log_ski_wax">Log Ski Wax</string>
    <string name="ski_wax_calculator">Ski Wax Calculator</string>
    <string name="weather_button">Weather Button</string>
    <string name="detailed_info">Detailed Info</string>
    <string name="ski_wax_log">Ski Wax Log</string>
    <string name="wax_log_details">Wax Log Details</string>
    <string name="register_login">Register/Login</string>
    <string name="wax_history">Wax History</string>
    <string name="wax_log">Wax Log</string>
    <string name="go_back">Go Back</string>
    <string name="submit">Submit</string>
    <string name="ski">Ski</string>
    <string name="glide_wax">Glide Wax</string>
    <string name="grip_wax">Grip Wax</string>
    <string name="comments">Comments</string>
    <string name="_01_01_2000">01/01/2000</string>
    <string name="weather_api_will_be_added_for_assignment_3">Weather API will be added for assignment 3</string>
    <string name="_02_23_2022">02/23/2022</string>
    <string name="location">Location</string>
    <string name="time">time</string>
    <string name="sky_conditions">Sky Conditions</string>
    <string name="min_temp">Min Temp</string>
    <string name="max_temp">Max Temp</string>
    <string name="temp">Temp</string>
    <string name="rain">rain</string>
    <string name="_32">32%</string>
    <string name="humidity">Humidity</string>
    <string name="_29_92hpa">29.92Hpa</string>
    <string name="pressure">Pressure</string>
    <string name="_20km_h">20km/h</string>
    <string name="wind">Wind</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="get_location">Get Location</string>
    <string name="temperatureC">Temperature(°C)</string>
    <string name="_10_176_c">+10°C</string>
    <string name="_15_c">- -15°C</string>
    <string name="_14_c">-14°C</string>
    <string name="_13_c">-13°C</string>
    <string name="_12_c">-12°C</string>
    <string name="_11_c">-11°C</string>
    <string name="_10_c">-10°C</string>
    <string name="_9_c">-9°C</string>
    <string name="_8_c">-8°C</string>
    <string name="_7_c">-7°C</string>
    <string name="_6_c">-6°C</string>
    <string name="_5_c">-5°C</string>
    <string name="_4_c">-4°C</string>
    <string name="_3_c">-3°C</string>
    <string name="_2_c">-2°C</string>
    <string name="_1_c">-1°C</string>
    <string name="_0_c">0°C</string>
    <string name="_p1_c">1°C</string>
    <string name="_p2_c">2°C</string>
    <string name="_p3_c">3°C</string>
    <string name="_p4_c">4°C</string>
    <string name="_p5_c">5°C</string>
    <string name="_p6_c">+6°C</string>
    <string name="_p7_c">+7°C</string>
    <string name="_p8_c">8°C</string>
    <string name="_p9_c">9°C</string>
    <string name="temperature_f">Temperature (°F)</string>
    <string name="_5_f">- 5°F</string>
    <string name="_6_8_f">6.8°F</string>
    <string name="_8_6_f">8.6°F</string>
    <string name="_10_4_f">10.4°F</string>
    <string name="_12_2_f">12.2°F</string>
    <string name="_14_f">14°F</string>
    <string name="_15_8_f">15.8°F</string>
    <string name="_17_6_f">17.6°F</string>
    <string name="_19_4_f">19.4°F</string>
    <string name="_21_2_f">21.2°F</string>
    <string name="_23_f">23°F</string>
    <string name="_24_8_f">24.8°F</string>
    <string name="_26_6_f">26.6°F</string>
    <string name="_28_4_f">28.4°F</string>
    <string name="_30_2_f">30.2°F</string>
    <string name="_32_f">32°F</string>
    <string name="_33_8_f">33.8°F</string>
    <string name="_35_6_f">35.6°F</string>
    <string name="_37_4_f">37.4°F</string>
    <string name="_39_2_f">39.2°F</string>
    <string name="_41_f">41°F</string>
    <string name="_42_8_f">+42.8°F</string>
    <string name="_44_6_f">+44.6°F</string>
    <string name="_46_4_f">46.4°F</string>
    <string name="_48_2_f">48.2°F</string>
    <string name="_50_f">50°F</string>
    <string name="yellow">Yellow</string>
    <string name="yellow_red">Yellow/Red</string>
    <string name="red">Red</string>
    <string name="red_violet">Red/Violet</string>
    <string name="violet">Violet</string>
    <string name="violet_blue">Violet/Blue</string>
    <string name="blue">Blue</string>
    <string name="blue_green">Blue/Green</string>
    <string name="green">Green</string>
    <string name="glide_wax_chart">Glide Wax Chart</string>
    <string name="see_grip_wax">See Grip Wax</string>
    <string name="grip_wax_chart">Grip Wax Chart</string>
    <string name="grip_wax_new">Grip Wax (new snow)</string>
    <string name="grip_wax_old">Grip Wax (old snow)</string>
    <string name="klister">Klister</string>
    <string name="red_silver">Red Silver</string>
    <string name="red_special">Red Special</string>
    <string name="violet_special">Violet Special</string>
    <string name="blue_extra">Blue Extra</string>
    <string name="polar">Polar</string>
    <string name="temp_f">Temp (°F)</string>
    <string name="temp_c">Temp (°C)</string>
    <string name="see_glide_wax">See Glide Wax</string>
    <string name="wax_recommendations">Wax Recommendations</string>
</resources>