<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogWaxActivity"
    android:background="@drawable/rectangle">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/wax_log"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:background="@color/white"
        android:id="@+id/editTextDate"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        android:hint="@string/_02_23_2022"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <EditText
        android:background="@color/white"
        android:id="@+id/skiEntry"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/ski"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <EditText
        android:background="@color/white"
        android:id="@+id/glideWaxEntry"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/glide_wax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skiEntry" />

    <EditText
        android:background="@color/white"
        android:id="@+id/gripWaxEntry"
        android:layout_width="225dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/grip_wax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glideWaxEntry" />

    <EditText
        android:background="@color/white"
        android:id="@+id/editTextComments"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/comments"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gripWaxEntry" />

</androidx.constraintlayout.widget.ConstraintLayout>